<resources>
    <string name="app_name">PracticeFinal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="content_add">Add Room</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>

    <string name="room_name">Room Name</string>
    <string name="room_image">Picture of Room</string>

    <string name="switch_name">Name of Switch</string>

    <string name="sensor_reading">Button to Refresh Sensor Reading</string>
    <string name="sensor_value">Current Sensor Value</string>

    <!-- Add room activity related views-->
    <string name="title_activity_add_room">AddRoomActivity</string>
    <string name="add_room_take_photo">Take Photo of the room</string>
    <string name="add_room_name_hint">Room Name</string>
    <string name="add_room_add_more_room">+</string>
    <string name="add_room_commit">Commit</string>

    <string name="directory">/DCIM/IoTHomeSystems</string>

    <!-- Add sensor fragment related views-->
    <string name="add_sensor_controller_number_hint">Controller Number</string>
    <string name="add_sensor_device_name_hint">Device Name</string>
    <string name="add_sensor_port_hint">Port</string>
    <string name="add_sensor_switch_or_sensor_hint">Switch or Sensor</string>
    <string name="add_sensor_sensor_selected">Sensor</string>
    <string name="add_sensor_switch_selected">Switch</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
