<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.acer.practicefinal.AddSensorFragment">

    <EditText
        android:id="@+id/sensorControllerNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_sensor_controller_number_hint"
        />

    <EditText
        android:id="@+id/sensorDeviceNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_sensor_device_name_hint"
        android:layout_below="@+id/sensorControllerNumberEditText"
        />

    <EditText
        android:id="@+id/sensorPortEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_sensor_port_hint"
        android:layout_below="@+id/sensorDeviceNameEditText"
        />

    <Switch
        android:id="@+id/sensorSwitchOrSensorSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_sensor_switch_or_sensor_hint"
        android:layout_below="@+id/sensorPortEditText"
        />
</RelativeLayout>
