<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.acer.practicefinal.AddRoomActivity">

    <EditText
        android:id="@+id/roomNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_room_name_hint"
        />

    <Button
        android:id="@+id/takePhotoOfRoomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_room_take_photo"
        android:layout_below="@+id/roomNameEditText"
        />

    <ViewAnimator
        android:id="@+id/fragment_room_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/takePhotoOfRoomButton"
        >
    </ViewAnimator>

    <Button
        android:id="@+id/addMoreSensorButton"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/add_room_add_more_room"
        android:layout_below="@+id/fragment_room_sensor"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
